--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,13 @@
                 </executions>
             </plugin>
 
+            <!-- Coveralls-->
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>2.2.0</version>
+            </plugin>
+
         </plugins>
 
     </build>
