--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,14 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.6</version>
+
+                <configuration>
+                    <formats>
+                        <format>xml</format>
+                        <format>html</format>
+                    </formats>
+                </configuration>
+
                 <executions>
                     <execution>
                         <phase>verify</phase>
