--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,7 @@
 
             </plugin>
 
-            <!-- Cobertura -->
+            <!-- Cobertura is not yet supported on Java 8
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
@@ -115,14 +115,14 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin> -->
 
-            <!-- Coveralls-->
+            <!-- Coveralls
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>2.2.0</version>
-            </plugin>
+            </plugin> -->
 
         </plugins>
 
