Fetch spyware data from TMC - #1

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <version>1.9</version>
         </dependency>
 
+        <!-- Apache HTTPClient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.3.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
