New features for configuration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.profiles.active = development
 
 # Spyware
-url.spyware = data.spyware.testmycode.net
+spyware.url = data.spyware.testmycode.net
+
+# TMC
+tmc.url = tmc-kesapojat.jamo.io
