TMC Username service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ spring.profiles.active = development
 spyware.url = data.spyware.testmycode.net
 
 # TMC
-tmc.url = localhost
+tmc.url = tmc-kesapojat.jamo.io
 tmc.version = 7
