Ignored and excluded com.google.* from cobertura

--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,14 @@
                 <version>2.6</version>
 
                 <configuration>
+                    <instrumentation>
+                        <ignores>
+                            <ignore>com.google*</ignore>
+                        </ignores>
+                        <excludes>
+                            <exclude>com/google/*</exclude>
+                        </excludes>
+                    </instrumentation>
                     <formats>
                         <format>xml</format>
                         <format>html</format>
