--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: java
 
 before_script:
-    - "echo $JAVA_OPTS"
-    - "export JAVA_OPTS=-Xmx3072m"
+    - export MAVEN_OPTS="-Xmx2g"
 
 notifications:
 
