--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: java
 
-before_script:
-    - export MAVEN_OPTS="-Xmx2g"
+env:
+    global:
+        JAVA_OPTS=-Xmx2g
+        MAVEN_OPTS="-Xmx2g"
 
 notifications:
 
