--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 env:
     global:
         JAVA_OPTS="-Xmx2g"
-        MAVEN_OPTS="-Xmx2g"
+        MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=512m"
 
 notifications:
 
