--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 
 env:
     global:
-        MAVEN_OPTS="-Xmx2g -XX:MaxPermSize=512m"
+        MAVEN_OPTS="-Xmx3g -XX:MaxPermSize=300M"
 
 notifications:
 
