--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ spring.profiles.active = development
 # Spyware
 spyware.url = data.spyware.testmycode.net
 
+# 4mb
+spyware.chunkSize = 4194304
+
 # TMC
 tmc.url = tmc-kesapojat.jamo.io
 tmc.version = 7
