--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 spring.profiles.active = development
 
+# Security
+
+security.basic.enabled = true
+security.basic.realm = TMC Snapshot API
+security.basic.path = /**
+
 # Spyware
 spyware.url = data.spyware.testmycode.net
 
