--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.profiles.active = development
 
 # Security
-
 security.basic.enabled = true
 security.basic.realm = TMC Snapshot API
 security.basic.path = /**
@@ -11,3 +10,6 @@ spyware.url = data.spyware.testmycode.net
 
 # 2MB
 spyware.chunkSize = 2097152
+
+# Cache size (10MB)
+spyware.cacheSize = 10485760
