--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ security.basic.path = /**
 # Spyware
 spyware.url = data.spyware.testmycode.net
 
-# 2MB
-spyware.chunkSize = 2097152
+# Spyware chunk size (2MB)
+spyware.chunkSize = 2000000
 
-# Cache size (10MB)
-spyware.cacheSize = 10485760
+# Cache size (100MB)
+spyware.cacheSize = 100000000
