--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,5 +11,8 @@ spyware.url = data.spyware.testmycode.net
 # Spyware chunk size (2MB)
 spyware.chunkSize = 2000000
 
-# Cache size (100MB)
+# Spyware cache size (100MB)
 spyware.cacheSize = 100000000
+
+# Instances
+spyware.instances = hy, mooc
