Basic authentication - JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.profiles.active = development
 
 # Security
-security.basic.enabled = true
 security.basic.realm = TMC Snapshot API
 security.basic.path = /**
+security.user.name = username
+security.user.password = password
 
 # Spyware
 spyware.url = data.spyware.testmycode.net
@@ -16,3 +17,7 @@ spyware.cacheSize = 100000000
 
 # Instances
 spyware.instances = hy, mooc
+
+# Database
+spring.jpa.hibernate.ddl-auto: update
+spring.jpa.hibernate.naming_strategy: org.hibernate.cfg.ImprovedNamingStrategy
