--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,4 @@ spyware.cacheSize = 100000000
 spyware.instances = hy, mooc
 
 # Database
-spring.jpa.hibernate.ddl-auto: update
-spring.jpa.hibernate.naming_strategy: org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.ddl-auto = update
