--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -5,3 +5,6 @@ security.user.password = password
 # Spyware
 spyware.username = username
 spyware.password = password
+
+# Database
+spring.jpa.show-sql = true
