Use the embedded logger only for development

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- Use the embedded logger only for development -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Use the embedded container only for development -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
