Use provided Logback

--- a/pom.xml
+++ b/pom.xml
@@ -26,17 +26,17 @@
 
     <dependencies>
 
+        <!-- Use provided Logback -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <!-- Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- Use the embedded logger only for development -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-logging</artifactId>
-            <scope>provided</scope>
         </dependency>
 
         <!-- Use the embedded container only for development -->
