--- a/src/main/resources/application-development.properties.sample
+++ b/src/main/resources/application-development.properties.sample
@@ -5,3 +5,7 @@ security.user.password = password
 # Spyware
 spyware.username = username
 spyware.password = password
+
+# Database
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
