--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,5 @@ spyware.cacheSize = 100000000
 spyware.instances = hy, mooc
 
 # Database
+spring.jpa.database = H2
 spring.jpa.hibernate.ddl-auto = none
