--- a/src/main/resources/application-development.properties.sample
+++ b/src/main/resources/application-development.properties.sample
@@ -2,7 +2,7 @@
 security.user.name = username
 security.user.password = password
 
-# Spyware
+# Spyware server
 spyware.username = username
 spyware.password = password
 
