--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ security.basic.path = /**
 security.user.name = username
 security.user.password = password
 
-# Spyware
+# Spyware server
 spyware.url = data.spyware.testmycode.net
 
 # Spyware chunk size (2MB)
