--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,13 @@
     <name>tmc-snapshot-api</name>
 
     <properties>
+
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <powermock.version>1.5.5</powermock.version>
-        
-        <!-- Override default spring version with latest -->
+
+        <!-- Override default Spring version with latest -->
         <spring.version>4.1.0.RELEASE</spring.version>
+
     </properties>
 
     <parent>
