--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,14 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- PostgreSQL -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.3-1102-jdbc41</version>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Commons Codec -->
         <dependency>
             <groupId>commons-codec</groupId>
