Add development user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,5 @@ spyware.cacheSize = 100000000
 spyware.instances = hy, mooc
 
 # Database
-spring.jpa.database = H2
+spring.jpa.database = h2
 spring.jpa.hibernate.ddl-auto = update
