--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,8 @@
                             <exclude>**/*$*.class</exclude>
                             <exclude>com/google/*</exclude>
                             <exclude>fi/helsinki/cs/tmc/snapshot/api/app/App.class</exclude>
+                            <exclude>fi/helsinki/cs/tmc/snapshot/api/app/WebInitialiser.class</exclude>
+                            <exclude>fi/helsinki/cs/tmc/snapshot/api/model/StringIdentifier.class</exclude>
                             <exclude>fi/helsinki/cs/tmc/snapshot/api/service/CourseService.class</exclude>
                             <exclude>fi/helsinki/cs/tmc/snapshot/api/service/EventService.class</exclude>
                             <exclude>fi/helsinki/cs/tmc/snapshot/api/service/EventProcessorService.class</exclude>
