Exclude class from Cobertura

--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,7 @@
                             <exclude>fi/helsinki/cs/tmc/snapshot/api/app/App.class</exclude>
                             <exclude>fi/helsinki/cs/tmc/snapshot/api/app/WebInitialiser.class</exclude>
                             <exclude>fi/helsinki/cs/tmc/snapshot/api/model/StringIdentifier.class</exclude>
+                            <exclude>fi/helsinki/cs/tmc/snapshot/api/repository/UserRepository.class</exclude>
                             <exclude>fi/helsinki/cs/tmc/snapshot/api/service/CourseService.class</exclude>
                             <exclude>fi/helsinki/cs/tmc/snapshot/api/service/EventService.class</exclude>
                             <exclude>fi/helsinki/cs/tmc/snapshot/api/service/EventProcessorService.class</exclude>
